# SkyAgentOS

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.full-observability.yml  docker-compose.hybrid-cloud.yml  docker-compose.local-only.yml  docker-compose.yml  litellm_config.yaml  main_orchestrator.py  mcp_workspace_server.py  openclaw_skill.js  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/fixtures/: sample_mission.json
data/migrations/: 001_init_core.sql
data/seed/: seed_mission_templates.json
demos/: run_demo.sh
docs/: architecture.md  model-routing.md  quickstart-local.md  skills.md  troubleshooting.md
docs/api/: mission-api.md
docs/architecture/: v2-overview.md
docs/runbooks/: local-dev.md
evals/browser/: login_flow_eval.py
evals/desktop/: file_ops_eval.py
evals/end_to_end/: report_generation_eval.py
infra/docker/: docker-compose.dev.yml
infra/otel/: collector.yaml
infra/prometheus/: prometheus.yaml
infra/terraform/: main.tf
orchestrator/: Dockerfile  requirements.txt
scripts/seed/: load_templates.sh
scripts/test/: all.sh
telemetry/: otel-collector.yaml
tests/: test_api_server.py  test_compose_alignment.py  test_desktop_tool.py  test_e2e_dry_run.py  test_eval_harness.py  test_memory_queue.py  test_policy_engine_v2.py  test_runtime_routing.py  test_skyvern_tool.py  test_state_machine.py  test_v2_dispatcher.py  test_v2_scaffold_files.py  test_v2_state_machine.py
(+46 files in other folders)
