[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skyagentos"
version = "0.3.1"
description = "SkyAgentOS v2 agent runtime"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "black>=25.0.0",
  "ruff>=0.14.0",
  "pre-commit>=4.0.0",
]

[project.scripts]
skyagentos = "skyagentos.api.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]
